--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Neo4j data (Docker volumes)
+neo4j_data/
+neo4j_logs/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
