--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,37 @@
 [pytest]
-testpaths = tests
+# Pytest configuration for Odoo Tracker
+
+# Python path
+pythonpath = .
+
+# Test discovery patterns
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Coverage options
 addopts =
     -v
-    --tb=short
     --strict-markers
-filterwarnings =
-    ignore::DeprecationWarning
+    --tb=short
+    --disable-warnings
+
+# Markers
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+
+# Test paths
+testpaths = tests
+
+# Ignore paths
+norecursedirs =
+    .git
+    .pytest_cache
+    *.egg
+    build
+    dist
+    venv
+    odoo18
+    .cache
